[package]
name = "RustLsassDump"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.

[dependencies]
clap = "2.30.0"
log = "0.4.17"
obfstr = "0.4.1"

[dependencies.windows-sys]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Win32_System_IO",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader"
]


[build-dependencies]
cc = "1"
